tests/baselines/reference/parserSkippedTokens13.errors.txt
==== tests/cases/compiler/parserSkippedTokens13.ts (2 errors) ====
    /regexp/ \ ;
             ~
!!! parserSkippedTokens13.ts(1,10): error TS1001: Unexpected character "\".
             ~
!!! parserSkippedTokens13.ts(1,10): error TS1005: ';' expected.